# geekhub-app

./: .gitignore  README.md  UPDATE_LOG.md  install.json  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  tray.rs  url.rs
